<resources>
    <string name="app_name">demo</string>

    <string name="amount__label">Amount:</string>
    <string name="currency__label">Currency:</string>

    <string name="access_token__label">Public Key:</string>
    <string name="check">Check</string>

    <string name="checkout_id__label">Checkout ID:</string>

    <string name="aplazame_unavailable_token">Aplazame is not currently available</string>
    <string name="aplazame_unavailable_error">An error has occurred</string>
</resources>
