<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context="com.aplazame.sdk.demo.MainActivity">

    <RelativeLayout
        android:id="@+id/top"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="#267BBD">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:src="@drawable/aplazame_toolbar"
            android:layout_centerInParent="true"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <LinearLayout
            android:id="@+id/amount_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                android:layout_marginEnd="6dp"
                android:gravity="center_vertical"
                android:text="@string/amount__label" />

            <EditText
                android:id="@+id/amount"
                android:inputType="numberDecimal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:textColor="#000000"
                android:minLines="2"
                android:maxLines="2"
                android:layout_weight="1"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/currency_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/amount_form"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                android:layout_marginEnd="6dp"
                android:gravity="center_vertical"
                android:text="@string/currency__label" />

            <EditText
                android:id="@+id/currency"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:textColor="#000000"
                android:minLines="2"
                android:maxLines="2"
                android:layout_weight="1"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/access_token__form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/currency_form"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                android:layout_marginEnd="6dp"
                android:gravity="center_vertical"
                android:text="@string/access_token__label" />

            <EditText
                android:id="@+id/access_token"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:textColor="#000000"
                android:minLines="2"
                android:maxLines="2"
                android:layout_weight="1"/>

            <TextView
                android:id="@+id/check"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#0000FF"
                android:layout_marginStart="6dp"
                android:gravity="center_vertical"
                android:text="@string/check"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/checkout_id__form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/access_token__form"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/checkout_id__form"
                android:layout_marginEnd="6dp"
                android:gravity="center_vertical"
                android:text="@string/checkout_id__label"
                android:textColor="#000000" />

            <EditText
                android:id="@+id/checkout_id"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:textColor="#000000"
                android:minLines="2"
                android:maxLines="2"
                android:layout_weight="1"/>
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/go_checkout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/checkout_id__form"
            android:background="#267BBD">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:src="@drawable/aplazame_button"/>
        </RelativeLayout>
    </RelativeLayout>

    <View
        android:id="@+id/layer_button"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="#BBC3C3C3"
        android:layout_alignParentBottom="true"
        android:clickable="true" />

    <ProgressBar
        android:id="@+id/progress"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="6dp"
        android:padding="1dp"
        android:visibility="gone"
        tools:visibility="visible"
        android:layout_alignParentBottom="true" />
</RelativeLayout>
